[gd_scene load_steps=6 format=3 uid="uid://7866mkc4xgun"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_dj5kw"]
[ext_resource type="Texture2D" uid="uid://cs2il6a54liob" path="res://assets/background_menu.png" id="1_lmk7b"]
[ext_resource type="FontFile" uid="uid://bg63ovpquqxsg" path="res://assets/fonts/Ancient Medium.ttf" id="2_mbmtq"]
[ext_resource type="AudioStream" uid="uid://b1bqgsytrjk1l" path="res://assets/sounds/menu_sound.mp3" id="4_0ic3h"]
[ext_resource type="Texture2D" uid="uid://delqxit66eger" path="res://assets/icons/mute.png" id="4_vp6xj"]

[node name="menu" type="Node2D"]
script = ExtResource("1_dj5kw")

[node name="Background" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = -2.0
offset_right = 1922.0
offset_bottom = 1078.0
texture = ExtResource("1_lmk7b")
expand_mode = 1

[node name="Opacity" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.423529, 0.423529, 0.423529, 0.439216)

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 672.0
offset_top = 325.0
offset_right = 1435.0
offset_bottom = 755.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mbmtq")
theme_override_font_sizes/font_size = 80
text = "Divine Protection"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Jogar	"

[node name="OptionButton" type="Button" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Opções"

[node name="QuitButton" type="Button" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Sair"

[node name="SoundButton" type="Button" parent="."]
offset_left = 36.0
offset_top = 936.0
offset_right = 116.0
offset_bottom = 1016.0
icon = ExtResource("4_vp6xj")
icon_alignment = 1
expand_icon = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0ic3h")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="MainContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_sound_button_pressed"]
